--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -934,6 +934,8 @@ iframe {
     padding: 50px 0;
   }
   header .wraper .fr .fl {
+    display: flex;
+    justify-content: center;
     border-right: 0 none;
     float: none;
     text-align: center;
@@ -1131,7 +1133,6 @@ header .wraper .fr .fl {
 @media only screen and (max-width: 767px) {
   .wrp-con > p {
     color: black;
-    padding: 43px;
     display: block;
     text-align: center;
   }
