--- a/assets/css/owl.carousel.css
+++ b/assets/css/owl.carousel.css
@@ -15,7 +15,9 @@
 }
 
 .owl-carousel .owl-wrapper {
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   -webkit-transform: translate3d(0px, 0px, 0px);
 }
@@ -64,4 +66,14 @@
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
+}
+
+@media screen and (orientation: portrait) {
+  .owl-wrapper {
+    flex-direction: column;
+  }
+
+  .owl-item {
+    padding-bottom: 10px;
+  }
 }
